<?xml version="1.0"?>
<package>
  <name>gdown</name>
  <version>3.2.5</version>
  <description>Wget for files at Google Drive.</description>
  <maintainer email="www.kentaro.wada@gmailc.om">Kentaro Wada</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-requests</run_depend>
</package>
