[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "gdown"
description = "Google Drive Public File/Folder Downloader"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" }]
keywords = ["google-drive", "download", "wget", "curl"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4",
  "filelock",
  "requests[socks]",
  "tqdm",
  "typing_extensions>=4.0; python_version < '3.12'",
]
dynamic = ["readme", "version"]

[project.scripts]
gdown = "gdown.__main__:main"

[project.urls]
Homepage = "https://github.com/wkentaro/gdown"

[dependency-groups]
dev = [
  "mdformat>=0.7.17",
  "pytest>=8.3.5",
  "pytest-xdist>=3.6.1",
  "ruff>=0.15.10",
  "taplo>=0.9.3",
  "ty>=0.0.29",
  "typos>=1.45.0",
  "yamlfix>=1.16.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
